--- a/.github/workflows/zip.yml
+++ b/.github/workflows/zip.yml
@@ -5,6 +5,11 @@ on:
     paths-ignore:
       - "**/*.md"
       - '**/*.txt'
+  pull_request:
+    paths-ignore:
+      - "**/*.md"
+      - '**/*.txt'
+  workflow_dispatch:
 
 jobs:
   checks:
