Format json c parsing (#2)
Also build with C11

--- a/.github/workflows/zip.yml
+++ b/.github/workflows/zip.yml
@@ -2,11 +2,14 @@ name: Pack patch zip
 
 on:
   push:
-    paths:
-      - '**/*.c'
-      - '**/*.yml'
-      - '**/*.json'
-      - '**/*.py'
+    paths-ignore:
+      - "**/*.md"
+      - '**/*.txt'
+  pull_request:
+    paths-ignore:
+      - "**/*.md"
+      - '**/*.txt'
+  workflow_dispatch:
 
 jobs:
   checks:
