--- a/.github/workflows/zip.yml
+++ b/.github/workflows/zip.yml
@@ -117,6 +117,7 @@ jobs:
 
       - name: Create Release
         if: |
+          github.ref_name == 'main' &&
           github.event_name == 'push' &&
           github.repository == 'illusion0001/PS4-PS5-Game-Patch'
         env:
