CI: Upload logs on success or failure

--- a/.github/workflows/zip.yml
+++ b/.github/workflows/zip.yml
@@ -116,6 +116,7 @@ jobs:
           path: patch1_artifact
 
       - name: Upload artifact logs
+        if: success() || failure()
         uses: actions/upload-artifact@main
         with:
           name: logs
